--- a/style.css
+++ b/style.css
@@ -20,8 +20,12 @@
     margin: auto;
     padding: 27px;
     border: 1px solid #888;
-    width: 72%;
-    height: 672px;
+    width: 68%;
+    height: 535px;
     box-shadow: 0px 10px 30px rgb(0 0 0 / 5%);
     border-radius: 30px;
+}
+
+.card{
+  background-image: linear-gradient(#75e0f2, #e9d4a1);
 }
